--- a/UI project HTML CSS JS/style.css
+++ b/UI project HTML CSS JS/style.css
@@ -40,6 +40,7 @@ nav {
   background:rgb(70, 4, 70);
 
   flex: 2;
+ 
 }
 .nav-links {
     justify-content: space-around;
@@ -83,15 +84,16 @@ nav {
     -webkit-text-fill-color:transparent; */
 }
 .cover img {
-    height: 120%;
-    padding: 15px;
+    height: 110%;
+    padding: 20px;
     box-shadow: 3px 3px 3px black ; 
     filter: drop-shadow(0px 5px 3px black);
-    animation: drop 1.5s ease;  
+    animation: drop 1.5s ease; 
+    border-left: 15in
 }
 .cover{
     flex: 1;
-    height:40vh;
+    height:30vh;
 }
 .intro {
     background:  #f5deb3;
@@ -143,7 +145,7 @@ nav {
  @keyframes drop {
      0% {
          opacity: 0;
-         transform: translateY(-80px);
+         transform: translateY(-70px);
      }
      100% {
         opacity: 1;
@@ -156,7 +158,7 @@ nav {
 
  .mid-coffee {
     float: left;
-    padding: 20px;
+    padding: 5px;
     
 }
 @media screen and (max-width:1024px){
